--- a/src/less/index.less
+++ b/src/less/index.less
@@ -26,7 +26,7 @@ li{
     z-index: 999;
     margin-left: 15%;
     ._logo{
-       &>img{
+       &>a>img{
             width: 124px;
             margin-top: 30px;
             float: left;
@@ -140,13 +140,304 @@ li{
         text-align: center;
     }
 }
-
+/* 黑图 */
 .section-title{
     position: relative;
+    margin-bottom: 15px;
     img{
-        position: absolute;
-        left: -400px;
+       
+        float: left;
+        margin-left: -400px;
        
        
     }
+}
+
+/* 两大4小手机列表 */
+.phone{
+
+    .phone-list{
+        overflow: hidden;
+        li{
+        float: left;
+        &:hover{
+            box-shadow: 0 0 5px 5px darkolivegreen;
+        }
+        p{
+            text-align: center;
+        }
+    }
+   
+    }
+    .phone-list>li:nth-of-type(1),.phone-list>li:nth-of-type(2){
+        width: 617px;
+        height: 610px;
+        background-color: white;
+        box-sizing: border-box;
+        padding-top: 55px;
+        position: relative;
+        p:nth-of-type(1){
+            color: #333;
+            font-size: 28px;
+        }
+        p:nth-of-type(2){
+            color: #333;
+            font-size: 18px;
+            margin-bottom: 3px;
+        }
+        p:nth-of-type(3){
+            color: #c00;
+            font-size: 22px;
+        }
+        .lingquan{
+            display: block;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: #ff3149;
+            line-height: 60px;
+            color: #fff;
+            font-size: 16px;
+            text-align: center;
+            position: absolute;
+            z-index: 1; 
+            left: 30px;
+            top: 30px;
+        }
+
+        img{
+            width: 460px;
+            display: block;
+            margin: 0 auto;
+        }
+    }
+    .phone-list>li:nth-of-type(1){
+        margin-right: 10px;
+    }
+
+    .phone-small{
+        background-color: white;
+        margin-top: 15px;
+        margin-right: 10px;
+        margin-bottom: 8px;
+        width: 303px;
+            height: 375px;
+        >div{
+            
+            p{
+                text-align: center;
+            }
+        }   
+        
+        img{
+            width: 230px;
+            display: block;
+            margin: 0 auto;
+            margin-top: 30px;
+            margin-bottom: 20px;
+        }
+        p:nth-of-type(1){
+            color: #333;
+            font-size: 16px;
+            margin-bottom: 2px;
+        }
+        p:nth-of-type(2){
+            color: #999;
+            font-size: 14px;
+        }
+        p:nth-of-type(3){
+            color: #c00;
+            font-size: 22px;
+        }
+
+    }
+
+
+}
+
+/* 标题设置 */
+.main-title{
+    
+    
+    margin-bottom: 10px;
+
+    h3{
+        text-align: center;
+        font-size: 30px;
+    }
+}
+
+.section-box2{
+    height: 450px;
+    background-color: #fff;
+    border-bottom: 1px solid #eee;
+    overflow: hidden;
+    position: relative;
+    a{
+        width: 100%;
+        height: 100%;
+       
+        img{            
+            width: auto;
+            height: auto;
+            left: 50%;
+            top: 50%;
+            position: absolute;
+            top: 0;
+            left: -430px;
+        }
+    }
+}
+
+/* 商品列表 */
+.product-list{
+    width: 1240px;
+    ul{
+        overflow: hidden;
+        
+        li{
+            float: left;
+            position: relative;
+            width: 303px;
+            height: 375px;
+            margin-right: 9px;
+            margin-top: 10px;
+            background-color: white;
+            overflow: hidden;
+            &:hover{
+                box-shadow: 0 0 3px 3px #ccc;
+            }
+            img{
+                width: 100%;
+            }
+            div{
+                width: 100%;
+                position: absolute;
+                z-index: 1;
+                left: 0;
+                bottom: 5px;
+                p{
+                    text-align: center;
+                }
+                p:nth-of-type(1){
+                    color: #fff;
+                    font-size: 21px;
+                    font-weight: 700;
+                }
+                p:nth-of-type(2){
+                    font-size: 14px;
+                    color: #fff;
+                   /*  text-indent: 1em; */
+                }
+                p:nth-of-type(3){
+                    font-size: 24px;
+                    font-weight: 700;
+                    color: #ebce6b;
+                }
+            }
+        }
+        .other-img{
+            img{
+                width: 230px;
+                display: block;
+                margin: 0 auto;
+                margin-top: 30px;
+            }
+            p:nth-of-type(1){
+                color: #333;
+                font-size: 16px;
+            }
+            p:nth-of-type(2){
+                color: #999;
+                font-size: 14px;
+            }
+            p:nth-of-type(3){
+                color: #c00;
+                font-size: 22px;
+            }
+        }
+    }
+}
+
+/* 社区分享4 */
+.user-share{
+
+    ul{
+       .other-img{
+        img{
+        width: 100%;
+        margin-top: 0;
+        }
+    } 
+
+    .discuss-user-info{
+        top: 210px;
+        img{
+            width: 36px;
+            margin:0 10px;
+            display: inline-block;
+            border-radius: 50%;
+        }
+        span{
+            color: black;
+        }
+        p{
+            padding: 10px 15px 15px;
+            font-size: 16px;
+            line-height: 27px;
+            text-align: left;
+            height: 66px;
+        }
+        i{
+            color: #999;
+            display: block;
+            padding: 0 15px;
+            margin-top: 10px;
+            text-align: left;
+        }
+    }
+    
+    }
+    
+    
+}
+
+/* no margin - r*/
+#no-mr{
+    margin-right: 0;
+}
+
+/* Flyme 7个li */
+.nc-video{
+    width: 1240px;
+
+    ul{
+        img{
+            width: 100%;
+        }
+        li{
+            width: 303px;
+            height: 245px;
+            float: left;
+            margin-right: 9px;
+            margin-bottom: 15px;
+            &:hover{
+                box-shadow: 0 0 3px 3px #ccc;
+            }
+            
+            p{
+                font-size: 16px;
+                line-height: 55px;
+                text-align: center;
+                color: black;
+            }
+        }
+
+        .nc-two{
+            width: 615px;
+        }
+    }
+}
+.main{
+    background-color: #F4F4F4;
 }
