--- a/src/css/main-head.css
+++ b/src/css/main-head.css
@@ -27,10 +27,14 @@ li {
   z-index: 999;
   /* margin-left: 15%; */
 }
+.header ._logo > a {
+  display: block;
+  float: left;
+}
 .header ._logo > a > img {
   width: 124px;
   margin-top: 30px;
-  float: left;
+  /* float: left; */
   margin-right: 20px;
 }
 .header ._logo ._logo-l {
