--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -90,7 +90,9 @@
                     color: #999;
                     line-height: 27px;
                     font-size: 12px;
-
+                    &:hover{
+                        color: #337ab7;
+                    }
                     
                 }
             }
