--- a/src/less/index.less
+++ b/src/less/index.less
@@ -26,10 +26,13 @@ li{
     z-index: 999;
     margin-left: 15%;
     ._logo{
+        &>a{
+            display: block;
+            float: left;
+        }
        &>a>img{
             width: 124px;
-            margin-top: 30px;
-            float: left;
+            margin-top: 30px;            
             margin-right: 20px;
         }
 
