--- a/src/less/login.less
+++ b/src/less/login.less
@@ -3,8 +3,11 @@
     height: auto;
     padding-top: 28px;
     padding-bottom: 40px;
-    img{
+    a{
         display: block;
+    }
+    img{
+       /*  display: block; */
         width: 110px;
     }
 }
