--- a/src/less/main-head.less
+++ b/src/less/main-head.less
@@ -25,10 +25,14 @@ li{
     z-index: 999;
     /* margin-left: 15%; */
     ._logo{
+        &>a{
+            display: block;
+            float: left;
+        }
        &>a>img{
             width: 124px;
             margin-top: 30px;
-            float: left;
+            /* float: left; */
             margin-right: 20px;
         }
 
