--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -83,6 +83,9 @@
   line-height: 27px;
   font-size: 12px;
 }
+._foot .foot-2 .foot-2l .foot-2low a:hover {
+  color: #337ab7;
+}
 ._foot .foot-2 .foot-2r {
   float: right;
   margin-top: -30px;
