--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,10 +27,13 @@ li {
   z-index: 999;
   margin-left: 15%;
 }
+.header ._logo > a {
+  display: block;
+  float: left;
+}
 .header ._logo > a > img {
   width: 124px;
   margin-top: 30px;
-  float: left;
   margin-right: 20px;
 }
 .header ._logo ._logo-l {
