--- a/src/less/product1.less
+++ b/src/less/product1.less
@@ -1,1 +1,42 @@
 @charset 'utf-8';
+.p0{
+    width: 1240px;
+    padding: 0;
+}
+.fast-nav{
+    background: #f6f8fb;
+    .container{
+        height: 70px;
+        color: #333;
+
+        ._name{
+            margin-top: 15px;
+            float: left;
+            font-size: 26px;  
+        }
+        ._products{
+            float: left;
+            margin-top: 25px;
+            margin-left: 10px;
+            overflow: hidden;
+            
+            li{
+                float: left;
+                border-right: 1px solid #dedede;
+
+                a{
+                    display: block;
+                    padding: 0 10px;
+                    color: #333;
+                    line-height: 20px;
+                    font-size: 16px;
+                    text-decoration: none;
+                    transition: color .3s;
+                }
+                &:nth-last-of-type(1){
+                    border: none;
+                }
+            }
+        }
+    }
+}
