--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,9 +37,10 @@ li {
   margin-right: 20px;
 }
 .header ._logo ._logo-l {
-  overflow: hidden;
+  /* overflow: hidden; */
   height: 82px;
   float: left;
+  position: relative;
 }
 .header ._logo ._logo-l > li {
   float: left;
@@ -50,6 +51,43 @@ li {
   padding: 31px 16px 30px;
   line-height: 21px;
   transition: color 0.1s linear;
+}
+.header ._logo ._logo-l ._phone:hover .phone-subnav {
+  display: block;
+}
+.header ._logo ._logo-l .phone-subnav {
+  position: absolute;
+  top: 100px;
+  left: -100px;
+  width: 1240px;
+  z-index: 999;
+  background-color: white;
+  display: none;
+}
+.header ._logo ._logo-l .phone-subnav li {
+  width: 150px;
+  float: left;
+  margin-left: 20px;
+}
+.header ._logo ._logo-l .phone-subnav li img {
+  width: 100%;
+}
+.header ._logo ._logo-l .phone-subnav li p {
+  text-align: center;
+}
+.header ._logo ._logo-l ._appdown-D {
+  position: absolute;
+  top: 100px;
+  left: -100px;
+  width: 1240px;
+  z-index: 999;
+  display: none;
+}
+.header ._logo ._logo-l ._appdown-D img {
+  width: 100%;
+}
+.header ._logo ._logo-l ._appdown:hover ._appdown-D {
+  display: block;
 }
 .header ._logo .shit {
   float: left;
