--- a/src/less/product1-d.less
+++ b/src/less/product1-d.less
@@ -1,4 +1,4 @@
 @charset 'utf-8';
-@import './library/main-head.less';
-@import './library/footer.less';
-@import './library/product1.less';
+@import './main-head.less';
+@import './footer.less';
+@import './product1.less';
