--- a/src/css/product1.css
+++ b/src/css/product1.css
@@ -37,3 +37,163 @@
 .fast-nav .container ._products li:nth-last-of-type(1) {
   border: none;
 }
+._shop {
+  overflow: hidden;
+  /*  position: relative; */
+}
+.preview {
+  float: left;
+  width: 580px;
+  position: sticky;
+  top: 0;
+}
+.preview .shop-slider {
+  width: 580px;
+}
+.preview .shop-slider .carousel-indicators li {
+  border: 1px solid black !important;
+}
+.preview .shop-slider img {
+  width: 100%;
+}
+.preview .shop-slider .carousel-control {
+  background-image: none;
+}
+.property {
+  position: relative;
+  float: right;
+  width: 568px;
+  font-size: 14px;
+  padding-top: 25px;
+}
+.property .property-hd h1 {
+  margin-bottom: 14px;
+  font-size: 36px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #333;
+}
+.property .property-hd .mod-info {
+  font-size: 16px;
+  color: #333;
+  line-height: 26px;
+  font-weight: 400;
+}
+.property .property-price {
+  padding-top: 15px;
+}
+.property .property-price small {
+  font-size: 24px;
+  font-family: arial;
+  font-style: normal;
+  color: #E03D3D;
+}
+.property .property-price .property-price-t {
+  color: #E03D3D;
+  line-height: 46px;
+  font-size: 36px;
+  font-weight: 400;
+}
+.property .property-price .fenqi {
+  color: #E03D3D;
+  font-size: 16px;
+  line-height: 60px;
+  margin-left: 20px;
+}
+.property p {
+  font-size: 16px;
+  line-height: 44px;
+  color: #333;
+}
+.property .property-service {
+  margin-bottom: 15px;
+}
+.property .property-service a {
+  display: block;
+  width: 568px;
+  height: 63px;
+  border: 1px solid #ccc;
+  line-height: 63px;
+  text-align: center;
+  font-size: 16px;
+  color: #333;
+  font-weight: 400;
+}
+.property .property-color a {
+  display: block;
+  width: 280px;
+  height: 63px;
+  border: 1px solid #008cff;
+  line-height: 63px;
+  text-align: center;
+  font-size: 16px;
+  color: #333;
+  font-weight: 400;
+}
+.property .property-length a {
+  display: block;
+  width: 280px;
+  height: 63px;
+  border: 1px solid #008cff;
+  line-height: 63px;
+  text-align: center;
+  font-size: 16px;
+  color: #333;
+  font-weight: 400;
+}
+.property .property-flower li {
+  float: left;
+  width: 184px;
+  height: 94px;
+  margin-right: 8px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  padding-top: 27px;
+}
+.property .property-flower li a span {
+  display: block;
+  text-align: center;
+  line-height: 18px;
+  font-size: 16px;
+  color: #333;
+}
+.property .property-flower li a span:nth-of-type(2) {
+  color: #8c8c8c;
+  font-size: 14px;
+  padding-top: 3px;
+  font-weight: 400;
+}
+.property .property-num input {
+  outline: none;
+  border: 1px solid #ccc;
+  text-align: center;
+  width: 180px;
+  height: 56px;
+  font-size: 20px;
+}
+.property .pro-done small {
+  font-size: 24px;
+  font-family: arial;
+  font-style: normal;
+  color: #E03D3D;
+}
+.property .pro-done .property-price-t {
+  color: #E03D3D;
+  line-height: 46px;
+  font-size: 36px;
+  font-weight: 400;
+}
+.property .pro-done .pro-done-buy {
+  margin-left: 15px;
+}
+.property .add-car {
+  display: block;
+  width: 568px;
+  height: 54px;
+  text-align: center;
+  line-height: 54px;
+  background: #008cff;
+  color: white;
+  font-size: 18px;
+  margin: 15px 0;
+}
