--- a/src/less/index.less
+++ b/src/less/index.less
@@ -352,14 +352,15 @@ li{
             position: relative;
             width: 300px;
             height: 375px;
-            margin-right: 9px;
             margin-top: 10px;
+            margin-bottom: 15px;
+            margin-right: 9px;
             background-color: white;
             overflow: hidden;
-
+            transition: all .3s ease;
             
             &:hover{
-                box-shadow: 0 0 3px 3px #ccc;
+                box-shadow: 0 15px 30px rgba(0,0,0,.1);
             }
             img{
                 width: 100%;
