--- a/src/less/index.less
+++ b/src/less/index.less
@@ -129,13 +129,13 @@ li{
         }
         &>div:nth-of-type(2){
             float: left;
-            margin-top: 30px;
+            margin-top: 27px;
             &:hover ul{
                 display: block;
             }
             img{
-                width: 30px;
-                margin-left: 10px;
+                width: 35px;
+                margin-left: 5px;
             }
 
             ul{
@@ -155,7 +155,25 @@ li{
                    line-height: 21px;
                } 
             }
+
+
         }
+
+        .head2-count{
+            position: absolute;
+            top: 30px;
+            right: -3px;
+            height: 15px;
+            border-radius: 50%;
+            background: #c00;
+            color: #fff;
+            line-height: 15px;
+            text-align: center;
+            display: block;
+            padding: 0 4px;
+            text-indent: 0;
+        }
+
     }    
         
     }
