--- a/src/css/login.css
+++ b/src/css/login.css
@@ -64,23 +64,21 @@
   text-indent: 8px;
 }
 /* 登录键 */
-#_login {
+#_login input {
   background-color: #387aff;
-}
-#_login a {
   width: 100%;
-  display: block;
   height: 46px;
   font-size: 14px;
-  line-height: 46px;
+  line-height: 43px;
   text-align: center;
   margin-bottom: 10px;
-  /*  outline: none; */
+  outline: none;
   color: #fff;
-  border-radius: 10px;
+  border-radius: 3px;
   text-decoration: none;
+  border: none;
 }
-#_login a:hover {
+#_login input:hover {
   background-color: #2b8cc5;
 }
 /* 注册 忘记密码 */
