--- a/src/less/login.less
+++ b/src/less/login.less
@@ -78,19 +78,20 @@
 
 /* 登录键 */
 #_login{
-    background-color:#387aff;
-    a{
+   
+    input{
+        background-color:#387aff;
         width: 100%;
-        display: block;
         height: 46px;
         font-size: 14px;
-        line-height: 46px;
+        line-height: 43px;
         text-align: center;
         margin-bottom: 10px;       
-       /*  outline: none; */
+        outline: none;
         color: #fff;
-        border-radius: 10px;
+        border-radius: 3px;
         text-decoration: none;
+        border: none;
 
         &:hover{
             background-color:#2b8cc5;
