--- a/src/less/index.less
+++ b/src/less/index.less
@@ -25,7 +25,7 @@ li{
     position: absolute;
     top: 0;
     z-index: 999;
-    margin-left: 15%;
+    margin-left: 5px;
     ._logo{
         &>a{
             display: block;
@@ -180,16 +180,6 @@ li{
     
 }
 
-#banner-img-size{
-    img{
-       /*  height: 650px; */
-        width: 2000px;
-    }
-}
-._banner{
-    overflow: hidden;
-
-}
 
 ._second{
     padding-top: 30px;
@@ -340,7 +330,7 @@ li{
     height: 450px;
     background-color: #fff;
     border-bottom: 1px solid #eee;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
     a{
         width: 100%;
@@ -353,7 +343,7 @@ li{
             top: 50%;
             position: absolute;
             top: 0;
-            left: -430px;
+            left: -645px;
         }
     }
 }
@@ -515,8 +505,6 @@ li{
         }
     }
 }
-.main{
-    background-color: #F4F4F4;
-}
+
 
 
